--- a/project2/index.html
+++ b/project2/index.html
@@ -21,8 +21,10 @@
    <div class="options" id="options">
     <p class="theme" id="theme1">Background Color: <input  oninput="Background()" type="color" id="color-picker" value="#ffffff"  min="#0000ff" max="#6699ff"p>
     <p class="theme" id="theme2">
-      <div class="theme_buttons" id="theme_buttons">
-      <button id="dinosaurs_btn" onclick="Dinosaurs()"><img id="btn_image_dinosaur" src="Dinosaur1.png" alt="dinosaurs"></button>
+      <div  id="theme_buttons">
+        <button class="theme_buttons" id="black_white_btn" onclick="Black_white()"></button>
+      <button class="theme_buttons" id="blue_green_btn" onclick="Blue_green()"></button>
+      <button class="theme_buttons" id="pink_violet_btn" onclick="Pink_violet()"></button>
        </div>
     </p>
     <p class="theme" id="theme3">3</p>
