--- a/project2/index.html
+++ b/project2/index.html
@@ -25,6 +25,7 @@
         <button class="theme_buttons" id="black_white_btn" onclick="Black_white()"></button>
       <button class="theme_buttons" id="blue_green_btn" onclick="Blue_green()"></button>
       <button class="theme_buttons" id="pink_violet_btn" onclick="Pink_violet()"></button>
+      <button class="theme_buttons" id="red_yellow_btn" onclick="Red_yellow()"></button>
        </div>
     </p>
     <p class="theme" id="theme3">3</p>
