--- a/IA/index.html
+++ b/IA/index.html
@@ -4,11 +4,24 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.js">
+    <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <title>Plants</title>
 </head>
 <body>
-    
+    <div id="home">
+        <div id="header">
+            <h1 class="header1">My plants</h1>
+            <p class="header">Home</p>
+            <p class="header">Plant care</p>
+            <p class="header">Watering</p>
+            <p class="header">My plants</p>
+        </div>
+        <div id="home_img">
+            <img id="h_image" src="img1.jpg" alt="home image">
+            <h1 id="name">My plants</h1>
+        </div>
+
+    </div>
 </body>
 </html>
